compiler/tests/liva/errors/e5001_unknown_trait.liva
// Error Test: E5001 — Unknown trait constraint
// EXPECT: E5001
process<T: Invalid>(x: T): T => x

main() {
    print(process(42))
}
